Added reflection card, Spotify playlist and background image

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="card card-playlist">
             <h3>Study Vibe</h3>
             <p>
-                <span class="accent-text">Currently Listening:</span> Instrumental Focus Playlist (Placeholder for embedded player)
+                <span class="accent-text">Currently Listening:</span> Instrumental Focus Playlist (<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/51ZQ1vr10ffzbwIjDCwqm4?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>)
             </p>
         </div>
 
