--- a/indexx.html
+++ b/indexx.html
@@ -281,7 +281,7 @@
                 <p class="accent-text">Building Student Digital Identity</p>
                 <p>Creating a professional personal website and hosting it live on the internet.</p>
             </div>
-            <a href="https://s79574.github.io/" target="_blank" class="lab-timer-btn">Try My Lab Timer App</a>
+            <a href="https://s79574.github.io/lab-timer-app/app.html" target="_blank" class="lab-timer-btn">Try My Lab Timer App</a>
         </div>
         
         <div class="card card-hobby">
